Updated NN tutorial note
Signed-off-by: Ogbulee <daniel.ogbu06@gmail.com>

--- a/NeuraNet.ipynb
+++ b/NeuraNet.ipynb
@@ -240,6 +240,155 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Back/Forward propagation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#After the forward pass and cost calculation (error/loss), Backpropagation takes place to get the delta. \n",
+    "#For calculating delta, it applies partial derivative and it starts from output to the last layer. And, \n",
+    "#once delta is calculated for the last layer, below formula is applied to get the new weight."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\DELL\\\\OneDrive\\\\Documents\\\\ML_Project\\\\NN_Learnings'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "94765736/94765736 [==============================] - 2s 0us/step\n",
+      "Model: \"sequential_8\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " resnet50 (Functional)       (None, 2048)              23587712  \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 2)                 4098      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 23591810 (90.00 MB)\n",
+      "Trainable params: 4098 (16.01 KB)\n",
+      "Non-trainable params: 23587712 (89.98 MB)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Implementing Resnet\n",
+    "\n",
+    "from tensorflow.keras.applications import ResNet50\n",
+    "from tensorflow.keras import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "\n",
+    "num_classes = 2\n",
+    "resnet_weights_path = 'c:\\\\Users\\\\DELL\\\\OneDrive\\\\Documents\\\\ML_Project\\\\NN_Learnings\\\\resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5'\n",
+    "\n",
+    "my_new_model = Sequential()\n",
+    "my_new_model.add(ResNet50(include_top=False, pooling='avg'))\n",
+    "my_new_model.add(Dense(num_classes, activation='softmax'))\n",
+    "\n",
+    "# Say not to train first layer (ResNet) model. It is already trained\n",
+    "my_new_model.layers[0].trainable = False\n",
+    "\n",
+    "my_new_model.load_weights(resnet_weights_path, by_name=True, skip_mismatch=True)\n",
+    "my_new_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_new_model.compile(optimizer='sgd', loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 0 images belonging to 0 classes.\n",
+      "Found 0 images belonging to 0 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.applications.resnet50 import preprocess_input\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "image_size = 225\n",
+    "data_generator = ImageDataGenerator(preprocessing_function=preprocess_input)\n",
+    "\n",
+    "\n",
+    "train_generator = data_generator.flow_from_directory(\n",
+    "        'c:\\\\Users\\\\DELL\\\\ML_Project\\\\NN_Learnings\\\\train',\n",
+    "        target_size=(image_size, image_size),\n",
+    "        batch_size=12,\n",
+    "        class_mode='categorical')\n",
+    "\n",
+    "validation_generator = data_generator.flow_from_directory(\n",
+    "        'c:\\\\Users\\\\DELL\\\\ML_Project\\\\NN_Learnings\\\\val',\n",
+    "        target_size=(image_size, image_size),\n",
+    "        batch_size=20,\n",
+    "        class_mode='categorical')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
