--- a/NeuraNet.ipynb
+++ b/NeuraNet.ipynb
@@ -350,15 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 0 images belonging to 0 classes.\n",
-      "Found 0 images belonging to 0 classes.\n"
+      "Found 72 images belonging to 2 classes.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 20 images belonging to 2 classes.\n"
      ]
     }
    ],
@@ -381,6 +387,271 @@
     "        target_size=(image_size, image_size),\n",
     "        batch_size=20,\n",
     "        class_mode='categorical')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6/6 [==============================] - 12s 2s/step - loss: 0.4061 - accuracy: 0.7917 - val_loss: 0.0817 - val_accuracy: 1.0000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x22a32754520>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_new_model.fit(\n",
+    "        train_generator,\n",
+    "        steps_per_epoch=6,\n",
+    "        validation_data=validation_generator,\n",
+    "        validation_steps=1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Optimization using Keras Tuner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-26-249b82b79d59>:4: DeprecationWarning: `import kerastuner` is deprecated, please use `import keras_tuner`.\n",
+      "  from kerastuner import RandomSearch\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "import numpy as np\n",
+    "from kerastuner import RandomSearch\n",
+    "from kerastuner.engine.hyperparameters import HyperParameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+      "29515/29515 [==============================] - 0s 0us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+      "26421880/26421880 [==============================] - 0s 0us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+      "5148/5148 [==============================] - 0s 0s/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+      "4422102/4422102 [==============================] - 0s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "fashion_mnist=keras.datasets.fashion_mnist\n",
+    "\n",
+    "(train_images,train_labels),(test_images,test_labels)=fashion_mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_images=train_images/255.0\n",
+    "test_images=test_images/255.0\n",
+    "\n",
+    "train_images=train_images.reshape(len(train_images),28,28,1)\n",
+    "test_images=test_images.reshape(len(test_images),28,28,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_model(hp):  \n",
+    "  model = keras.Sequential([\n",
+    "    keras.layers.Conv2D(\n",
+    "        filters=hp.Int('conv_1_filter', min_value=32, max_value=128, step=16),\n",
+    "        kernel_size=hp.Choice('conv_1_kernel', values = [3,5]),\n",
+    "        activation='relu',\n",
+    "        input_shape=(28,28,1)\n",
+    "    ),\n",
+    "    keras.layers.Conv2D(\n",
+    "        filters=hp.Int('conv_2_filter', min_value=32, max_value=64, step=16),\n",
+    "        kernel_size=hp.Choice('conv_2_kernel', values = [3,5]),\n",
+    "        activation='relu'\n",
+    "    ),\n",
+    "    keras.layers.Flatten(),\n",
+    "    keras.layers.Dense(\n",
+    "        units=hp.Int('dense_1_units', min_value=32, max_value=128, step=16),\n",
+    "        activation='relu'\n",
+    "    ),\n",
+    "    keras.layers.Dense(10, activation='softmax')\n",
+    "  ])\n",
+    "  \n",
+    "  model.compile(optimizer=keras.optimizers.Adam(hp.Choice('learning_rate', values=[1e-2, 1e-3])),\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "  \n",
+    "  return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuner_search=RandomSearch(build_model,\n",
+    "                          objective='val_accuracy',\n",
+    "                          max_trials=5,directory='output',project_name=\"Mnist Fashion\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trial 5 Complete [00h 12m 24s]\n",
+      "val_accuracy: 0.9178333282470703\n",
+      "\n",
+      "Best val_accuracy So Far: 0.9178333282470703\n",
+      "Total elapsed time: 00h 44m 35s\n",
+      "INFO:tensorflow:Oracle triggered exit\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuner_search.search(train_images,train_labels,epochs=3,validation_split=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Detecting that an object or model or tf.train.Checkpoint is being deleted with unrestored values. See the following logs for the specific values in question. To silence these warnings, use `status.expect_partial()`. See https://www.tensorflow.org/api_docs/python/tf/train/Checkpoint#restorefor details about the status object returned by the restore function.\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.1\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.2\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.3\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.4\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.5\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.6\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.7\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.8\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.9\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.10\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.11\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.12\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.13\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.14\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.15\n",
+      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.16\n"
+     ]
+    }
+   ],
+   "source": [
+    "model=tuner_search.get_best_models(num_models=1)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 26, 26, 32)        320       \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 24, 24, 64)        18496     \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 36864)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 128)               4718720   \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 10)                1290      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 4738826 (18.08 MB)\n",
+      "Trainable params: 4738826 (18.08 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/10\n",
+      "1688/1688 [==============================] - 210s 125ms/step - loss: 0.0415 - accuracy: 0.9851 - val_loss: 0.3700 - val_accuracy: 0.9157\n",
+      "Epoch 10/10\n",
+      "1688/1688 [==============================] - 204s 121ms/step - loss: 0.0285 - accuracy: 0.9902 - val_loss: 0.4382 - val_accuracy: 0.9188\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x22a3692af10>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(train_images, train_labels, epochs=10, validation_split=0.1, initial_epoch=8)"
    ]
   },
   {
